Fix overflow issue (again).

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
   width: 100%;
   pointer-events: none;
   visibility: hidden;
+}
+
+.p-plus--clone,
+.p-plus--clone .p-plus__primary-wrapper {
   overflow: hidden;
 }
 
